[project]
name = "opencode-chat-export"
version = "1.0.1"
description = "MCP server to export OpenCode chat history to Markdown"
authors = [{ name = "Serenity Zhou", email = "serenity.jingjing@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
opencode-chat-export = "opencode_chat_export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
